--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^4.0.0",
         "axios": "^1.1.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.3",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
@@ -19,9 +19,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.3",
         "jquery": "^3.7.1",
         "popper.js": "^1.16.1"
     }
