1. Fixing utang piutang feature (making sure the CRUD is working) with a bug on the ID shown on the modal 2. Adding the reminder feature (CRU) with a lack of deletion feature

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^4.4.3",
+        "fullcalendar": "^6.1.15",
         "jquery": "^3.7.1",
         "popper.js": "^1.16.1"
     }
